--- a/package.json
+++ b/package.json
@@ -2,5 +2,31 @@
   "dependencies": {
     "clean-css": "^5.3.3",
     "uglify-js": "^3.19.3"
-  }
+  },
+  "name": "bfxr2",
+  "version": "1.0.4",
+  "description": "sound effect generator (Bfxr.net)",
+  "main": "compile.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/increpare/bfxr2.git"
+  },
+  "keywords": [
+    "bfxr2",
+    "bfxr",
+    "dsp",
+    "sound",
+    "effects",
+    "audio"
+  ],
+  "author": "increpare",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/increpare/bfxr2/issues"
+  },
+  "homepage": "https://github.com/increpare/bfxr2#readme"
 }
