work on new prefab system

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
     "clean-css": "^5.3.3",
+    "cleanjs": "^1.0.1",
     "uglify-js": "^3.19.3"
   },
   "name": "bfxr2",
   "version": "1.0.4",
   "description": "sound effect generator (Bfxr.net)",
   "main": "compile.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
